<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screen.AddAppealActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_id"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue_light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/add_appeal_toolbar"
            android:textColor="@color/white"
            android:textSize="25sp" />


    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/phone_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/phone_number_text"
        android:textColor="@color/blue_light"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.vicmikhailau.maskededittext.MaskedEditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/edit_text_back"
        android:fontFamily="@font/poppins_regular"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:paddingStart="10dp"
        app:mask="(###) ## ### ## ##" />


    <TextView
        android:id="@+id/district_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/district_name_text"
        android:textColor="@color/blue_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/number_text" />


    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:paddingStart="10dp"
        android:background="@drawable/edit_text_back"
        android:fontFamily="@font/poppins_regular"
        android:imeOptions="actionNext"
        android:inputType="text" />

    <TextView
        android:id="@+id/request_date_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/request_date_text"
        android:textColor="@color/blue_light"
        android:textSize="18sp"
        android:textStyle="bold" />


    <com.vicmikhailau.maskededittext.MaskedEditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="120dp"
        android:background="@drawable/edit_text_back"
        android:fontFamily="@font/poppins_regular"
        android:hint="dd/mm/yyyy"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:paddingStart="10dp"
        android:textSize="15sp"
        app:mask="##/##/####"
        />

    <TextView
        android:id="@+id/desc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/description_name_text"
        android:textColor="@color/blue_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/request_date" />


    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:maxLines="7"
        android:paddingEnd="10dp"
        android:gravity="top|start"
        android:scrollbars="vertical"
        android:paddingStart="10dp"
        android:background="@drawable/edit_text_back"
        android:fontFamily="@font/poppins_regular"
        android:imeOptions="actionNext"
        android:inputType="textMultiLine"
        />






</LinearLayout>