<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_item"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:id="@+id/english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tag="en"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
       >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/english_text"
            android:textColor="@color/text_def"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/check_btn1"
            android:layout_width="24dp"
            android:tag="en"
            android:layout_height="24dp"
            android:visibility="visible"
            android:layout_marginStart="120dp"
            android:src="@drawable/check" />

        <Space
            android:layout_width="60dp"
            android:layout_height="24dp"

            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/russian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tag="ru"
        android:layout_marginTop="10dp"
       >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/russian_text"
            android:textColor="@color/text_def"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/check_btn2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:tag="ru"
            android:layout_marginStart="120dp"
            android:src="@drawable/check"
            android:visibility="visible" />

        <Space
            android:layout_width="60dp"
            android:layout_height="24dp"

            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/uzbek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tag="uz"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/uzbek_text"
            android:textColor="@color/text_def"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/check_btn3"
            android:layout_width="24dp"
            android:tag="uz"
            android:layout_height="24dp"
            android:layout_marginStart="120dp"
            android:src="@drawable/check"
            android:visibility="visible" />

        <Space
            android:layout_width="60dp"
            android:layout_height="24dp"

            />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/uzbek" />


</LinearLayout>