<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/item_back_color"
    tools:context=".screen.SettingsActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_id"
        android:layout_width="match_parent"
        android:background="@color/blue_light"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/profile_icon_title"
            android:textSize="25sp"
            android:textColor="@color/white"
            />


    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/lang_layout_id"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="66dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/settings_layout_back"
        android:orientation="horizontal"

        >

        <ImageView
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:src="@drawable/lang" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/language"
            android:textColor="@color/text_def"
            android:textSize="20sp"
            android:textStyle="bold"

            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mode_layout_id"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="136dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/settings_layout_back"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:layout_marginStart="23dp"
            android:src="@drawable/night_mode" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/night_mode"
            android:textColor="@color/text_def"
            android:textSize="20sp"
            android:textStyle="bold"

            />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch_id"
            android:layout_gravity="center"
            android:checked="false"
            android:textOff="OFF"
            android:paddingStart="10dp"
            android:layout_marginStart="135dp"
            android:textOn="ON"
            />



    </LinearLayout>




    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        app:menu="@menu/bottom_menu"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:id="@+id/bot_nav_id"
        />





</FrameLayout>